# CICD-Template

./: .gitignore  404.html  Dockerfile  LICENSE  README-PT.md  README.md  apiclient.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements_docs.txt  requirements_jarvis.txt  sitemap.xml
.githooks/: pre-commit
.github/workflows/: cd.yml  development.yml  publish-docs.yml  simple-ci.yml  timeout.yml
Introduction/: index.html
docs/: index.md
docs/assets/resources/templates/covers/: front.html.j2
docs/source/: main.md
scripts_jarvis/: construct_env.sh  start_runner.sh
source/main/: index.html
src/: main.py
tests/: pytorch_test.py
