[project]
name = "jarvis-cicd"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.2.1",
    "torch>=2.5.1",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 79  

[tool.ruff.lint]

select = [
  "E",   # pycodestyle
  "F",   # pyflakes
  "UP",  # pyupgrade,
  "I",   # isort
]