[project]
name = "jarvis-cicd"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.2.1",
    "torch>=2.5.1",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "ruff>=0.8.5",
]

doc = [
    "mkdocs-material>=9.5.49",
    "mkdocs>=1.6.1",
    "mkdocstrings-python>=1.13.0",
    "pymdown-extensions>=10.13",
    "markdown-include>=0.8.1",
    "mkdocs-exporter>=6.2.0",
    "playwright>=1.49.1",
    "mkdocs-macros-plugin>=1.3.7",
]

[tool.uv]
package = false


[tool.ruff]
line-length = 79  

[tool.ruff.lint]

select = [
  "E",   # pycodestyle
  "F",   # pyflakes
  "UP",  # pyupgrade,
  "I",   # isort
]
